# single-player-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW.cmake  FindGLM.cmake  FindSpdlog.cmake  FindVulkan.cmake
dependencies/common/spdlog-1.2.1/: CMakeLists.txt
dependencies/common/spdlog-1.2.1/tests/: CMakeLists.txt
dependencies/macos/vulkan-1.2.182.0/lib/: libSPIRV-Tools-shared.dylib  libVkLayer_device_simulation.dylib  libVkLayer_khronos_synchronization2.dylib
dependencies/macos/vulkan-1.2.182.0/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc  spirv-cross-c-shared.pc  vulkan.pc
dependencies/windows/vulkan-1.1.85.0/Include/vulkan/: vulkan_core.h
scripts/: compile-shaders.bat  compile-shaders.sh
src/: application.cpp  file-io.cpp  logger.cpp  main.cpp  renderer.cpp
src/shaders/: demo.vert
